--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@paypal/react-paypal-js": "^8.1.3",
-    "paypal-rest-sdk": "^1.8.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.17",
+    "@paypal/react-paypal-js": "^8.1.3",
+    "dotenv": "^16.3.1",
     "env": "^0.0.2",
     "ol": "^8.2.0",
     "paypal": "^1.0.1",
+    "paypal-rest-sdk": "^1.8.1",
+    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0"
